--- a/phpactor/templates/phpunit_test/SourceCode.php.twig
+++ b/phpactor/templates/phpunit_test/SourceCode.php.twig
@@ -9,5 +9,13 @@ use PHPUnit\Framework\TestCase;
 {% for class in prototype.classes %}
 class {{ class.name }} extends TestCase
 {
+    public function setUp(): void
+    {
+    }
+
+    /** @test */
+    public function itWorks()
+    {
+    }
 }
 {% endfor %}
